--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==3.1.5
 django-bootstrap4==2.3.1
 django-environ==0.4.5
 django-summernote==0.8.11.6
+gunicorn==20.0.4
 Pillow==8.1.0
 pytz==2020.5
 soupsieve==2.1
